# Merger

./: .gitignore  CMakeLists.txt  Doxyfile  Merger.pro  compile.bat  compile.sh  main.cpp
Doxygen/html/: algebra_8cpp_source.html  algebra_8h_source.html  annotated.html  classColumnVector-members.html  classColumnVector.html  classFirmWidget-members.html  classFirmWidget.html  classFirmWidget__coll__graph.md5  classFirmWidget__inherit__graph.map  classFirmWidget__inherit__graph.md5  classLinearDemandsConstantCosts-members.html  classLinearDemandsConstantCosts.html  classLinearDemandsConstantCosts__coll__graph.md5  classLinearDemandsConstantCosts__inherit__graph.map  classLinearDemandsConstantCosts__inherit__graph.md5  classLoadModelWidget-members.html  classLoadModelWidget.html  classLoadModelWidget__coll__graph.md5  classLoadModelWidget__inherit__graph.map  classLoadModelWidget__inherit__graph.md5  classMainWindow-members.html  classMainWindow.html  classMatrix-members.html  classMatrix.html  classMergeDialog-members.html  classMergeDialog.html  classMergeDialog__coll__graph.md5  classMergeDialog__inherit__graph.map  classMergeDialog__inherit__graph.md5  classMergeWidget-members.html  classMergeWidget.html  classMergeWidget__coll__graph.md5  classMergeWidget__inherit__graph.map  classMergeWidget__inherit__graph.md5  classModelFactory-members.html  classModelFactory.html  classModelInterface-members.html  classModelInterface.html  classModelInterface__inherit__graph.map  classModelInterface__inherit__graph.md5  (+97 more)
Doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  searchdata.js
Doxygen/latex/: annotated.tex  classColumnVector.tex  classFirmWidget.tex  classFirmWidget__coll__graph.md5  classFirmWidget__inherit__graph.md5  classLinearDemandsConstantCosts.tex  classLinearDemandsConstantCosts__coll__graph.md5  classLinearDemandsConstantCosts__inherit__graph.md5  classLoadModelWidget.tex  classLoadModelWidget__coll__graph.md5  classLoadModelWidget__inherit__graph.md5  classMainWindow.tex  classMatrix.tex  classMergeDialog.tex  classMergeDialog__coll__graph.md5  classMergeDialog__inherit__graph.md5  classMergeWidget.tex  classMergeWidget__coll__graph.md5  classMergeWidget__inherit__graph.md5  classModelFactory.tex  classModelInterface.tex  classModelInterface__inherit__graph.md5  classModelResult.tex  classModelResult__coll__graph.md5  classModelResult__inherit__graph.md5  classModelTableData.tex  classModelTableData__coll__graph.md5  classModelTableData__inherit__graph.md5  classModelTableView.tex  classModelTableView__coll__graph.md5  classModelTableView__inherit__graph.md5  classModelWidget.tex  classModelWidget__coll__graph.md5  classModelWidget__inherit__graph.md5  classModelWindow.tex  classModelWindow__coll__graph.md5  classModelWindow__inherit__graph.md5  classMultiProductFirmsWidget.tex  classMultiProductFirmsWidget__coll__graph.md5  classMultiProductFirmsWidget__inherit__graph.md5  (+9 more)
GUI/: main_window.cpp  main_window.h  model_result.cpp  model_result.h  model_widget.cpp  model_widget.h
GUI/Common/: base_table_view.cpp  base_table_view.h
GUI/CompareDialog/: compare_table_data.cpp  compare_table_data.h  compare_table_view.cpp  compare_table_view.h
GUI/MainWindow/: load_model_widget.cpp  load_model_widget.h  main_window.cpp  main_window.h
GUI/ModelWindow/: model_table_data.cpp  model_table_data.h  model_table_view.cpp  model_table_view.h  model_window.cpp  model_window.h
GUI/ModelWindow/MergeDialog/: merge_dialog.cpp  merge_dialog.h  merge_widget.cpp  merge_widget.h
GUI/ModelWindow/MergeDialog/Helpers/: firm_widget.cpp  firm_widget.h  multi_product_firms_widget.cpp  multi_product_firms_widget.h  product_list_item.h
GUI/PlotDialog/: model_plot_data.h  plot_chart.cpp  plot_chart.h  plot_chart_view.cpp  plot_chart_view.h  plot_dialog.cpp  plot_dialog.h  select_models_dialog.cpp  select_models_dialog.h
Latex/: fmetfm.cls  tfg.cls  tfg_economia.out  tfg_economia.tex
Models/: hyperbolic_demands_constant _costs.cpp  hyperbolic_demands_constant_costs.cpp  hyperbolic_demands_constant_costs.h  hyperbolic_demands_linear_costs.cpp  hyperbolic_demands_linear_costs.h  linear_demands_constant_costs.cpp  linear_demands_constant_costs.h  linear_demands_linear_costs.cpp  linear_demands_linear_costs.h  model_factory.h  model_interface.h  model_type.h  quadratic_demands_constant_costs.cpp  quadratic_demands_constant_costs.h  quadratic_demands_linear_costs.cpp  quadratic_demands_linear_costs.h
SampleModels/: hyperbolic_demands_constant_costs  hyperbolic_demands_constant_costs.txt  hyperbolic_demands_linear_costs.txt  linear_demands_constant_costs.txt  quadratic_demands_constant_costs.txt  quadratic_demands_linear_costs.txt
Utils/: algebra.cpp  algebra.h  column_vector.cpp  column_vector.h  matrix.cpp  matrix.h  row_vector.cpp  row_vector.h
